@@ -19,6 +19,7 @@ import static org.mockito.Mockito.when;
 import org.mockito.MockitoAnnotations;
 
 import com.example.application.product.port.out.ProductRepository;
+import com.example.application.product.dto.ProductDTO;
 import com.example.domain.product.Product;
 import com.example.domain.product.ProductId;
 
@@ -35,33 +36,55 @@ class ProductServiceTest {
         productService = new ProductService(productRepository);
     }
     
+    // Utility method for converting from Product to ProductDTO
+    private ProductDTO convertToDTO(Product product) {
+        return new ProductDTO(
+            product.getId().toString(),
+            product.getCode(),
+            product.getName(),
+            product.getDescription(),
+            product.getImage(),
+            product.getCategory(),
+            product.getPrice(),
+            product.getQuantity(),
+            product.getInternalReference(),
+            product.getShellId(),
+            product.getInventoryStatus().name(),
+            product.getRating(),
+            product.getCreatedAt(),
+            product.getUpdatedAt()
+        );
+    }
+    
     @Test
     void createProduct_ShouldSaveAndReturnProduct() {
         // Arrange
         Product product = createTestProduct();
+        ProductDTO productDTO = convertToDTO(product);
         when(productRepository.existsByCode(product.getCode())).thenReturn(false);
         when(productRepository.save(any(Product.class))).thenReturn(product);
         
         // Act
-        Product result = productService.create(product);
+        ProductDTO result = productService.create(productDTO);
         
         // Assert
         assertNotNull(result);
-        assertEquals(product, result);
+        assertEquals(productDTO.getId(), result.getId());
+        assertEquals(productDTO.getCode(), result.getCode());
         verify(productRepository).existsByCode(product.getCode());
-        verify(productRepository).save(product);
+        verify(productRepository).save(any(Product.class));
     }
     
     @Test
     void createProduct_WithDuplicateCode_ShouldThrowException() {
         // Arrange
         Product product = createTestProduct();
+        ProductDTO productDTO = convertToDTO(product);
         when(productRepository.existsByCode(product.getCode())).thenReturn(true);
         
         // Act & Assert
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            productService.create(product);
-        });
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, 
+            () -> productService.create(productDTO));
         
         assertTrue(exception.getMessage().contains("already exists"));
         verify(productRepository).existsByCode(product.getCode());
@@ -72,30 +95,31 @@ class ProductServiceTest {
     void updateProduct_ShouldUpdateAndReturnProduct() {
         // Arrange
         Product product = createTestProduct();
+        ProductDTO productDTO = convertToDTO(product);
         when(productRepository.findById(product.getId())).thenReturn(Optional.of(product));
         when(productRepository.findAll()).thenReturn(List.of(product));
         when(productRepository.save(any(Product.class))).thenReturn(product);
         
         // Act
-        Product result = productService.update(product);
+        ProductDTO result = productService.update(productDTO);
         
         // Assert
         assertNotNull(result);
-        assertEquals(product, result);
+        assertEquals(productDTO.getId(), result.getId());
         verify(productRepository).findById(product.getId());
-        verify(productRepository).save(product);
+        verify(productRepository).save(any(Product.class));
     }
     
     @Test
     void updateProduct_WithNonExistentId_ShouldThrowException() {
         // Arrange
         Product product = createTestProduct();
+        ProductDTO productDTO = convertToDTO(product);
         when(productRepository.findById(product.getId())).thenReturn(Optional.empty());
         
         // Act & Assert
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            productService.update(product);
-        });
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, 
+            () -> productService.update(productDTO));
         
         assertTrue(exception.getMessage().contains("does not exist"));
         verify(productRepository).findById(product.getId());
@@ -106,16 +130,18 @@ class ProductServiceTest {
     void updateProduct_WithDuplicateCode_ShouldThrowException() {
         // Arrange
         Product product1 = createTestProduct();
+        ProductDTO productDTO1 = convertToDTO(product1);
+        
         Product product2 = createTestProduct();
         product2.setId(ProductId.newId()); // Different ID
+        product2.setCode("TEST-001"); // Same code
         
         when(productRepository.findById(product1.getId())).thenReturn(Optional.of(product1));
         when(productRepository.findAll()).thenReturn(Arrays.asList(product1, product2));
         
         // Act & Assert
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            productService.update(product1);
-        });
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, 
+            () -> productService.update(productDTO1));
         
         assertTrue(exception.getMessage().contains("already exists"));
         verify(productRepository).findById(product1.getId());
@@ -126,10 +152,11 @@ class ProductServiceTest {
     void deleteProduct_ShouldDeleteExistingProduct() {
         // Arrange
         ProductId id = ProductId.newId();
+        String idString = id.toString();
         when(productRepository.findById(id)).thenReturn(Optional.of(createTestProduct()));
         
         // Act
-        productService.deleteById(id);
+        productService.deleteById(idString);
         
         // Assert
         verify(productRepository).findById(id);
@@ -140,12 +167,12 @@ class ProductServiceTest {
     void deleteProduct_WithNonExistentId_ShouldThrowException() {
         // Arrange
         ProductId id = ProductId.newId();
+        String idString = id.toString();
         when(productRepository.findById(id)).thenReturn(Optional.empty());
         
         // Act & Assert
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            productService.deleteById(id);
-        });
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, 
+            () -> productService.deleteById(idString));
         
         assertTrue(exception.getMessage().contains("does not exist"));
         verify(productRepository).findById(id);
@@ -156,15 +183,16 @@ class ProductServiceTest {
     void getById_ShouldReturnProduct() {
         // Arrange
         ProductId id = ProductId.newId();
+        String idString = id.toString();
         Product product = createTestProduct();
         when(productRepository.findById(id)).thenReturn(Optional.of(product));
         
         // Act
-        Optional<Product> result = productService.getById(id);
+        Optional<ProductDTO> result = productService.getById(idString);
         
         // Assert
         assertTrue(result.isPresent());
-        assertEquals(product, result.get());
+        assertEquals(product.getId().toString(), result.get().getId());
         verify(productRepository).findById(id);
     }
     
@@ -172,10 +200,11 @@ class ProductServiceTest {
     void getById_WithNonExistentId_ShouldReturnEmpty() {
         // Arrange
         ProductId id = ProductId.newId();
+        String idString = id.toString();
         when(productRepository.findById(id)).thenReturn(Optional.empty());
         
         // Act
-        Optional<Product> result = productService.getById(id);
+        Optional<ProductDTO> result = productService.getById(idString);
         
         // Assert
         assertFalse(result.isPresent());
@@ -185,34 +214,39 @@ class ProductServiceTest {
     @Test
     void getAll_ShouldReturnAllProducts() {
         // Arrange
-        List<Product> products = List.of(createTestProduct(), createTestProduct());
-        when(productRepository.findAll()).thenReturn(products);
+        Product product1 = createTestProduct();
+        Product product2 = createTestProduct();
+        product2.setId(ProductId.newId());
+        product2.setCode("TEST-002");
+        when(productRepository.findAll()).thenReturn(Arrays.asList(product1, product2));
         
         // Act
-        List<Product> result = productService.getAll();
+        List<ProductDTO> results = productService.getAll();
         
         // Assert
-        assertEquals(2, result.size());
-        assertEquals(products, result);
+        assertEquals(2, results.size());
         verify(productRepository).findAll();
     }
     
     private Product createTestProduct() {
+        ProductId id = ProductId.newId();
+        String code = "TEST-001";
+        String name = "Test Product";
+        String description = "Test Description";
+        byte[] image = new byte[0];
+        String category = "Test Category";
+        double price = 99.99;
+        int quantity = 10;
+        String internalReference = "INT-REF-001";
+        int shellId = 1;
+        Product.InventoryStatus inventoryStatus = Product.InventoryStatus.INSTOCK;
+        int rating = 4;
+        long timestamp = System.currentTimeMillis();
+        
         return new Product(
-            ProductId.newId(),
-            "TEST-001",
-            "Test Product",
-            "Test Description",
-            new byte[0],
-            "Test Category",
-            99.99,
-            10,
-            "INT-REF-001",
-            1,
-            Product.InventoryStatus.INSTOCK,
-            4,
-            System.currentTimeMillis(),
-            System.currentTimeMillis()
+            id, code, name, description, image, category, 
+            price, quantity, internalReference, shellId, 
+            inventoryStatus, rating, timestamp, timestamp
         );
     }
 }
